[package]
name = "crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10"
chrono = { version = "0.4", features = [
    "std",
    "serde",
], default-features = false }
either = { version = "1.13", features = ["serde"] }
itertools = "0.14"
regex = "1.11"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3"
