[package]
name = "hitomi_la"
version = "0.1.0"
description = "A hitomi.la API wrapper for Rust"
edition = "2021"
authors = ["syrlee <user@syrflover.co>"]
homepage = "https://github.com/syrflover/hitomi.rs"
repository = "https://github.com/syrflover/hitomi.rs"
license = "MIT"
keywords = ["hitomi"]
categories = ["asynchronous", "api-bindings"]
rust-version = "1.81"
readme = "readme.md"

exclude = ["examples/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
either = { version = "1.15", features = ["serde"] }
itertools = "0.14"
regex = "1.11"
reqwest = { version = "0.12", features = ["zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tap = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "fs"] }
tracing-subscriber = "0.3"
